examples/neg/existential_effect_leaks.check
examples/neg/existential_effect_leaks.effekt:24:1:error: Effects {GiveInt} leave their defining scope.
def main(): Unit / { Console } = {
^
examples/neg/existential_effect_leaks.effekt:24:1:error: Unhandled effects: {GiveInt}
def main(): Unit / { Console } = {
^
examples/neg/existential_effect_leaks.effekt:41:1:error: Effects {GiveInt} leave their defining scope.
def foo() = {
^
